Potential fix for wrapping text around picture

--- a/style.css
+++ b/style.css
@@ -295,9 +295,11 @@ height: 350px;
 /* Formatting for the About page*/
 
 #selfPicture {
- width: 15%;
+ width: 20%;
  float: left;
+ clear: left;
  margin-left: 4%;
+ margin-right: 3%;
  margin-bottom: 3%;
 }
 
